# fluvio-client-cpp

./: CMakeLists.txt  Cargo.toml  README.md  fluvio_client_cppConfig.cmake
.github/workflows/: ci_e2e.yml  release.yml
cmake/: fluvio_client_cppConfig.cmake.in
examples/: README.md  consumer.cpp  producer.cpp
include/fluvio_client_cpp/: fluvio_client_cpp.hpp
src/: admin.rs  c_api.rs  client.rs  config.rs  consumer.rs  lib.rs  produce_output.rs  producer.rs
tests/: test_admin.cpp  test_auth.cpp  test_auth_c.c  test_c.c  test_config.cpp  test_consumer.cpp  test_producer.cpp
